[package]
name = "abc002"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc002-a = { alias = "a", problem = "https://atcoder.jp/contests/abc002/tasks/abc002_1" }
abc002-b = { alias = "b", problem = "https://atcoder.jp/contests/abc002/tasks/abc002_2" }
abc002-c = { alias = "c", problem = "https://atcoder.jp/contests/abc002/tasks/abc002_3" }
abc002-d = { alias = "d", problem = "https://atcoder.jp/contests/abc002/tasks/abc002_4" }

[[bin]]
name = "abc002-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc002-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc002-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc002-d"
path = "src/bin/d.rs"

[dependencies]
ac-library-rs = "=0.1.1"
memoise = "=0.3.2"
rand = "=0.8.5"
superslice = "=1.0.0"
itertools = "=0.11.0"
proconio = { version = "=0.4.5", features = ["derive"] }
rustc-hash = "=1.1.0"

[dev-dependencies]
