[package]
name = "abc003"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc003-a = { alias = "a", problem = "https://atcoder.jp/contests/abc003/tasks/abc003_1" }
abc003-b = { alias = "b", problem = "https://atcoder.jp/contests/abc003/tasks/abc003_2" }
abc003-c = { alias = "c", problem = "https://atcoder.jp/contests/abc003/tasks/abc003_3" }
abc003-d = { alias = "d", problem = "https://atcoder.jp/contests/abc003/tasks/abc003_4" }

[[bin]]
name = "abc003-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc003-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc003-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc003-d"
path = "src/bin/d.rs"

[dependencies]
ac-library-rs = "=0.1.1"
memoise = "=0.3.2"
rand = "=0.8.5"
superslice = "=1.0.0"
itertools = "=0.11.0"
proconio = { version = "=0.4.5", features = ["derive"] }
rustc-hash = "=1.1.0"

[dev-dependencies]
