[package]
name = "abc006"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc006-a = { alias = "a", problem = "https://atcoder.jp/contests/abc006/tasks/abc006_1" }
abc006-b = { alias = "b", problem = "https://atcoder.jp/contests/abc006/tasks/abc006_2" }
abc006-c = { alias = "c", problem = "https://atcoder.jp/contests/abc006/tasks/abc006_3" }
abc006-d = { alias = "d", problem = "https://atcoder.jp/contests/abc006/tasks/abc006_4" }

[[bin]]
name = "abc006-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc006-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc006-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc006-d"
path = "src/bin/d.rs"

[dependencies]
ac-library-rs = "=0.1.1"
memoise = "=0.3.2"
rand = "=0.8.5"
superslice = "=1.0.0"
itertools = "=0.11.0"
proconio = { version = "=0.4.5", features = ["derive"] }
rustc-hash = "=1.1.0"

[dev-dependencies]
