[package]
name = "abc379"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc379-a = { alias = "a", problem = "https://atcoder.jp/contests/abc379/tasks/abc379_a" }
abc379-b = { alias = "b", problem = "https://atcoder.jp/contests/abc379/tasks/abc379_b" }
abc379-c = { alias = "c", problem = "https://atcoder.jp/contests/abc379/tasks/abc379_c" }
abc379-d = { alias = "d", problem = "https://atcoder.jp/contests/abc379/tasks/abc379_d" }
abc379-e = { alias = "e", problem = "https://atcoder.jp/contests/abc379/tasks/abc379_e" }
abc379-f = { alias = "f", problem = "https://atcoder.jp/contests/abc379/tasks/abc379_f" }
abc379-g = { alias = "g", problem = "https://atcoder.jp/contests/abc379/tasks/abc379_g" }

[[bin]]
name = "abc379-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc379-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc379-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc379-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc379-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc379-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc379-g"
path = "src/bin/g.rs"

[dependencies]
ac-library-rs = "=0.1.1"
memoise = "=0.3.2"
rand = "=0.8.5"
superslice = "=1.0.0"
itertools = "=0.11.0"
proconio = { version = "=0.4.5", features = ["derive"] }
rustc-hash = "=1.1.0"

[dev-dependencies]
